--- a/bower.json
+++ b/bower.json
@@ -8,15 +8,21 @@
     "angular-resource": "~1.2",
     "angular-mocks": "~1.2",
     "angular-cookies": "~1.2",
-    "angular-animate": "~1.2",
+    "angular-animate": "^1.5.8",
     "angular-touch": "~1.2",
     "angular-sanitize": "~1.2",
     "angular-bootstrap": "~0.14.2",
     "angular-ui-utils": "~0.1.1",
-    "angular-ui-router": "~0.2.11"
+    "angular-ui-router": "~0.2.11",
+    "textAngular": "^1.5.10"
   },
   "devDependencies": {
     "bootstrap-social": "^5.0.0",
     "ng-table": "~0.8.3"
+  },
+  "resolutions": {
+    "angular": ">=1.3.0",
+    "angular-bootstrap": "~0.14.2",
+    "angular-animate": "^1.5.8"
   }
 }
