--- a/bower.json
+++ b/bower.json
@@ -11,10 +11,11 @@
     "angular-animate": "^1.5.8",
     "angular-touch": "~1.2",
     "angular-sanitize": "~1.2",
-    "angular-bootstrap": "~0.14.2",
+    "angular-bootstrap": "~1.0",
     "angular-ui-utils": "~0.1.1",
     "angular-ui-router": "~0.2.11",
-    "textAngular": "^1.5.10"
+    "textAngular": "^1.5.10",
+    "ngSweetAlert": "angular-sweetalert#~1.1.1"
   },
   "devDependencies": {
     "bootstrap-social": "^5.0.0",
