--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "bootstrap-social": "^5.0.0",
-    "ng-table": "~0.8.3"
+    "ng-table": "~0.8.3",
+    "angular-spinner": "~0.8.1"
   },
   "resolutions": {
     "angular": ">=1.3.0",
