--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^7.1.9",
     "lodash": "~2.4.1",
     "method-override": "~2.3.0",
+    "moment": "^2.15.1",
     "mongoose": "~3.8.8",
     "morgan": "~1.4.1",
     "nodemailer": "~1.3.0",
