--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "textAngular": "^1.5.10",
     "ngSweetAlert": "angular-sweetalert#~1.1.1",
     "ngstorage": "^0.3.11",
-    "moment": "^2.15.1"
+    "moment": "^2.15.1",
+    "angular-notify": "~2.5.0"
   },
   "devDependencies": {
     "bootstrap-social": "^5.0.0",
