--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "bootstrap-social": "^5.0.0",
     "ng-table": "~0.8.3",
-    "angular-spinner": "~0.8.1"
+    "angular-spinner": "~0.8.1",
+    "angularUtils-disqus": "angular-utils-disqus#~1.0.0"
   },
   "resolutions": {
     "angular": ">=1.3.0",
